Rename package. Create basic setup.py + CI config

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-.ipynb_checkpoints
 *.pyc
 *~
-*.swp
-prof.txt
-inversion/.cache
+*.so
+*.pyd
+build/
+dist/
+.*.swp
 .coverage
+.cache
+doc/_build
+doc/modules
+.ipynb_checkpoints
+*.egg-info
+.env
+MANIFEST
