--- a/environment2.yml
+++ b/environment2.yml
@@ -11,6 +11,7 @@ dependencies:
     - matplotlib
     - scikit-learn
     - flake8
+    - pylint
     - coverage
     - pytest
     - pytest-cov
@@ -18,5 +19,4 @@ dependencies:
     - sphinx_rtd_theme
     - jupyter
     - fatiando
-    - pip:
-        - sphinx-gallery
+    - sphinx-gallery
